--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         "hommformviewer"
     ],
     "support": {
-        "docs": "???",
-        "issues": "???"
+        "docs": "http://www.homm.ch",
+        "issues": "http://www.homm.ch"
     },
     "license": "MIT",
     "authors": [
